--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Sync to Hugging Face hub
-
 on:
   push:
     branches: [main]
+
+  # to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -13,27 +14,7 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
-
-      - name: Push to Hugging Face Hub (with debug)
+      - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: |
-          set -e  # stop the script on any error
-          set -x  # print each command as it runs
-
-          git config --global user.email "you@example.com"
-          git config --global user.name "Your Name"
-
-          git remote add hf https://hardik1247:${HF_TOKEN}@huggingface.co/spaces/hardik1247/Search_Engine_llms
-
-          echo "📍 Verifying remotes and branches"
-          git remote -v
-          git branch
-
-          echo "📍 Showing recent commit"
-          git log -1
-
-          echo "🚀 Attempting to push to Hugging Face..."
-          git push hf main
-
-
+        run: git push https://hardik1247:$HF_TOKEN@huggingface.co/spaces/hardik1247/Search_Engine_llms main
